[package]
name = "async-h1"
version = "2.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-h1"
documentation = "https://docs.rs/async-h1"
description = "Asynchronous HTTP 1.1 parser."
keywords = ["async", "http", "stream", "parser", "http1"]
categories = ["asynchronous", "parser-implementations", "web-programming", "web-programming::http-client", "web-programming::http-server"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies.futures-io]
default-features = false
features = ["std"]
version = "0.3"

[dependencies.futures-util]
default-features = false
features = ["std","sink"]
version = "0.3"

[dependencies]
httparse = "1.3.3"
async-io = "0.1.2"
http-types = {git="https://github.com/serzhiio/http-types", branch="agnostic"}
pin-project-lite = "0.1.1"
byte-pool = "0.2.1"
lazy_static = "1.4.0"
futures-core = "0.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
async-std = { version = "1.4.0", features = ["unstable", "attributes"] }
tempfile = "3.1.0"
async-test = "1.0.0"
