[package]
name = "async-h1"
version = "2.2.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-h1"
documentation = "https://docs.rs/async-h1"
description = "Asynchronous HTTP 1.1 parser."
keywords = ["async", "http", "stream", "parser", "http1"]
categories = [
  "asynchronous",
  "parser-implementations",
  "web-programming",
  "web-programming::http-client",
  "web-programming::http-server"
]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
httparse = "1.3.4"
async-std = { version = "1.8.0", features = ["unstable"] }
http-types = "2.9.0"
byte-pool = "0.2.2"
lazy_static = "1.4.0"
futures-core = "0.3.8"
log = "0.4.11"
pin-project = "1.0.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
async-std = { version = "1.7.0", features = ["unstable", "attributes"] }
tempfile = "3.1.0"
async-test = "1.0.0"
duplexify = "1.2.2"
async-dup = "1.2.2"
